@@ -1,3 +1,12 @@
+2005-02-23  Daniel Henninger  <jadestorm@nc.rr.com>
+
+	* src/legacy/glue.py:
+	* src/legacy/icqt.py:
+	Added lang import.
+
+	* src/jabw.py:
+	Added check in error type handler.
+
 2005-02-20  Daniel Henninger  <jadestorm@nc.rr.com>
 
 	* src/jabw.py:
